@startuml Core Model Classes - KU00298794

skinparam backgroundColor white
skinparam classBackgroundColor white
skinparam classBorderColor black
skinparam shadowing false
skinparam defaultFontSize 10
skinparam nodesep 60
skinparam ranksep 50

title Core Model Classes - KU00298794

package "Core Model" {
    abstract class KU00298794_User {
        -userId: String
        -name: String
        -email: String
        -contactNumber: String
        -membershipType: String
        -borrowedBooks: List<KU00298794_BorrowRecord>
        -transactionHistory: List<KU00298794_Transaction>
        -fineStrategy: KU00298794_FineCalculationStrategy
        +KU00298794_User(...)
        +{abstract} getBorrowingLimit(): int
        +{abstract} getDueDays(): int
        +getId(): String
        +getName(): String
        +getEmail(): String
        +getContactNumber(): String
        +getMembershipType(): String
        +getBorrowedBooks(): List<KU00298794_BorrowRecord>
        +addBorrowRecord(record): void
        +removeBorrowRecord(record): void
        +calculateFine(daysOverdue: int): double
        +payFine(amount: double): void
        +getTransactionHistory(): List<KU00298794_Transaction>
        +getFineStrategy(): KU00298794_FineCalculationStrategy
        +toString(): String
    }

    class KU00298794_Student {
        -BORROWING_LIMIT: int {static}
        -DUE_DAYS: int {static}
        +KU00298794_Student(userId, name, email, contactNumber)
        +getBorrowingLimit(): int
        +getDueDays(): int
    }

    class KU00298794_Faculty {
        -BORROWING_LIMIT: int {static}
        -DUE_DAYS: int {static}
        +KU00298794_Faculty(userId, name, email, contactNumber)
        +getBorrowingLimit(): int
        +getDueDays(): int
    }

    class KU00298794_Guest {
        -BORROWING_LIMIT: int {static}
        -DUE_DAYS: int {static}
        +KU00298794_Guest(userId, name, email, contactNumber)
        +getBorrowingLimit(): int
        +getDueDays(): int
    }

    class KU00298794_Book {
        -bookId: String
        -title: String
        -author: String
        -category: String
        -isbn: String
        -currentState: KU00298794_BookState
        -borrowedHistory: List<KU00298794_BorrowRecord>
        -reservationQueue: Queue<KU00298794_Reservation>
        -reviews: List<KU00298794_Review>
        -tags: List<String>
        -edition: String
        +KU00298794_Book(bookId, title, author, category, isbn)
        +getBookId(): String
        +getTitle(): String
        +getAuthor(): String
        +getCategory(): String
        +getIsbn(): String
        +getState(): KU00298794_BookState
        +setState(state): void
        +getBorrowedHistory(): List<KU00298794_BorrowRecord>
        +addBorrowRecord(record): void
        +getReservationQueue(): Queue<KU00298794_Reservation>
        +addReservation(user): void
        +getNextReserver(): KU00298794_User
        +borrow(user): boolean
        +returnBook(): boolean
        +reserve(user): boolean
        +getDescription(): String
        +setReviews(reviews): void
        +setTags(tags): void
        +setEdition(edition): void
        +getReviews(): List<KU00298794_Review>
        +getTags(): List<String>
        +getEdition(): String
        +toString(): String
    }

    class KU00298794_Librarian {
        -librarianId: String
        -name: String
        -email: String
        +KU00298794_Librarian(librarianId, name, email)
        +getLibrarianId(): String
        +getName(): String
        +getEmail(): String
        +verifyMember(userId): boolean
        +collectFine(user, amount): void
        +toString(): String
    }

    class KU00298794_BorrowRecord {
        -user: KU00298794_User
        -book: KU00298794_Book
        -borrowDate: Date
        -dueDate: Date
        -returnDate: Date
        -fineAmount: double
        +KU00298794_BorrowRecord(user, book, borrowDate, dueDate)
        +getUser(): KU00298794_User
        +getBook(): KU00298794_Book
        +getBorrowDate(): Date
        +getDueDate(): Date
        +getReturnDate(): Date
        +setReturnDate(returnDate): void
        +getFineAmount(): double
        +setFineAmount(fineAmount): void
        +isOverdue(): boolean
        +calculateOverdueDays(): int
        +toString(): String
    }

    class KU00298794_Reservation {
        -reservationId: String
        -user: KU00298794_User
        -book: KU00298794_Book
        -reservationDate: Date
        -status: String
        +KU00298794_Reservation(reservationId, user, book)
        +fulfill(): void
        +cancel(): void
        +getReservationId(): String
        +getUser(): KU00298794_User
        +getBook(): KU00298794_Book
        +getReservationDate(): Date
        +getStatus(): String
    }

    class KU00298794_Transaction {
        -transactionId: String
        -user: KU00298794_User
        -amount: double
        -date: Date
        -type: String
        +KU00298794_Transaction(transactionId, user, amount, type)
        +process(): void
        +getTransactionId(): String
        +getAmount(): double
        +getType(): String
        +getDate(): Date
    }

    class KU00298794_Review {
        -reviewerName: String
        -rating: double
        -comment: String
        -date: Date
        +KU00298794_Review(reviewerName, rating, comment)
        +toString(): String
        +getReviewerName(): String
        +getRating(): double
        +getComment(): String
    }
}

' Inheritance
KU00298794_User <|-- KU00298794_Student
KU00298794_User <|-- KU00298794_Faculty
KU00298794_User <|-- KU00298794_Guest

' Associations
KU00298794_User "1" --> "0..*" KU00298794_BorrowRecord
KU00298794_User "1" --> "0..*" KU00298794_Transaction
KU00298794_Book "1" --> "0..*" KU00298794_BorrowRecord
KU00298794_Book "1" --> "0..*" KU00298794_Reservation
KU00298794_Book "1" --> "0..*" KU00298794_Review
KU00298794_BorrowRecord --> KU00298794_User
KU00298794_BorrowRecord --> KU00298794_Book
KU00298794_Reservation --> KU00298794_User
KU00298794_Reservation --> KU00298794_Book
KU00298794_Transaction --> KU00298794_User

@enduml
